.k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meine-app
  namespace: m324-3
  labels:
    app: meine-app
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: meine-app
  template:
    metadata:
      labels:
        app: meine-app
    spec:
      containers:
        - name: meine-app
          image: lizsalatmon/m324-ts-dockerfile:m324Tagv5
          command:
            - /bin/sh
            - '-c'
            - yarn start
          startupProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            failureThreshold: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: http
            failureThreshold: 3
            periodSeconds: 5
          ports:
            - name: http
              containerPort: 3000
          resources:
            requests:
              cpu: 25m
              memory: 256Mi
            limits:
              cpu: 200m
              memory: 512Mi
