.k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: meine-app-m324 # Change this to your app name
  namespace: m324-3 # Ask the teacher for the namespace name
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
  selector:
    app: meine-app-m324 # Change this to your app name
