.k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meine-app
  namespace: m324-3
  annotations:
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
    acme.cert-manager.io/http01-edit-in-place: 'true'
    nginx.ingress.kubernetes.io/from-to-www-redirect: 'true'
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'true'
spec:
  tls:
    - hosts:
        - basil.m324.hackerman.ch
      secretName: basil.m324.hackerman.ch-tls
  rules:
    - host: basil.m324.hackerman.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: meine-app
                port:
                  number: 80
